Moved visit website link to bottom

--- a/index.html
+++ b/index.html
@@ -51,7 +51,6 @@
                 to be included in the first ever ‘Eternal Journey Playlist’ and
                 played LIVE by Pierre in one of his upcoming events.
               </p>
-              <p>Visit <a class="btn-link" href="">Eternal Journey</a></p>
             </div>
 
             <div>
@@ -169,7 +168,11 @@
     </main>
 
     <!-- Footer start -->
-    <footer class="footer">
+    <footer class="footer text-center">
+      <p class="d-inline-block mb-lg">
+        Visit <a class="btn-link" href="">Eternal Journey</a>
+      </p>
+
       <nav class="social-nav">
         <ul class="social-nav__list">
           <li class="social-nav__item">
