Added website link

--- a/index.html
+++ b/index.html
@@ -170,7 +170,13 @@
     <!-- Footer start -->
     <footer class="footer text-center">
       <p class="d-inline-block mb-lg">
-        Visit <a class="btn-link" href="">Eternal Journey</a>
+        Visit
+        <a
+          class="btn-link"
+          href="https://theeternaljourney.com/"
+          target="_blank"
+          >Eternal Journey</a
+        >
       </p>
 
       <nav class="social-nav">
