--- a/index.html
+++ b/index.html
@@ -42,14 +42,15 @@
                 <span class="text-blue">you.</span>
               </h3>
               <p>
-                Produce a piece of music which you have always wanted to but
-                were afraid that no label will pick up.
+                Produce a piece of music which you have always wanted but were
+                afraid that no label will pick up.
               </p>
               <p>
                 And, if this piece of music resonates with one of the World’s
-                first Spiritual DJ - Pierre Ravan, your music will have a chance
-                to be included in the first ever ‘Eternal Journey Playlist’ and
-                played LIVE by Pierre in one of his upcoming events.
+                first Spiritual House DJ - Pierre Ravan, your music will have a
+                chance to be included in the first ever ‘Eternal Journey
+                Playlist’ and played LIVE by Pierre in one of his upcoming
+                events.
               </p>
             </div>
 
@@ -125,7 +126,7 @@
                   </div>
                 </div>
 
-                <div class="form-group">
+                <!-- <div class="form-group">
                   <div class="input-group">
                     <input
                       id="tel"
@@ -134,7 +135,7 @@
                       placeholder="Contact Number"
                     />
                   </div>
-                </div>
+                </div> -->
 
                 <div class="form-group">
                   <div class="input-group">
@@ -142,7 +143,7 @@
                       id="link"
                       type="text"
                       class="input"
-                      placeholder="Media Link"
+                      placeholder="Media Link to the track"
                     />
                   </div>
                 </div>
